tests/valid/closure/capture_unrestricted_annotated_let_call.facet
fn main() -> unrestricted isize {
    let y: unrestricted isize = 7 in
    let f: unrestricted closure<'static>(unrestricted isize) -> unrestricted isize = closure [y](x: unrestricted isize) -> unrestricted isize { y } in
    (f 1)
}
