tests/invalid/lifetime/inner_let_reference_escape.facet
fn bad<'a>() -> unrestricted isize {
    let r: unrestricted &'a unrestricted isize =
        let x: unrestricted isize = 1 in (&x) in
    (*r)
}
